# gpu-try

./: Cargo.toml  README.md
patched/socket2/src/: lib.rs
resources/: gpu-funcs.ptx
workspace/adder/: Cargo.toml
workspace/adder/src/: main.rs
workspace/gpu-funcs/: Cargo.toml
workspace/gpu-funcs-buider/: Cargo.toml  build.rs
workspace/gpu-funcs/src/: lib.rs
